--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "react": "^16.1.0",
