--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
+    "query-string": "^5.0.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
